# readme-repos

./: .editorconfig  .gitignore  pyproject.toml  readme.md  repos_cards.py
templates/: card.svg.j2  readme.md.j2
