[tool.poetry]
name = "readme-repos"
version = "0.1.0"
description = ""
authors = ["Benjamín Vicente <benjavicente@uc.cl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^2.11.3"
requests = "^2.25.1"
pylint = "^2.7.2"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.812"
pylint = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
